examples/test/testpolicy5212.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5212
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key19: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value42
          key4: value42
          key39: value40
      podSelector:
        matchLabels:
          key23: value43
          key18: value3
          key6: value35
